--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -1,4 +1,5 @@
-FROM jupyterhub/jupyterhub:latest
+#FROM jupyterhub/jupyterhub:latest
+FROM jupyter/pyspark-notebook:spark-3.2.0
 
 LABEL maintainer="Dario Palladino <dariopalladino@protonmail.com>"
 ARG CFG_USER
@@ -6,4 +7,4 @@ ARG CFG_PASSWORD
 ENV USER ${CFG_USER}
 ENV PWD ${CFG_PASSWORD}
 
-RUN useradd --password $(python3 -c 'import crypt; print(crypt.crypt("${PWD}"))') -c "" ${USER} && pip install notebook
+RUN useradd --password $(python3 -c 'import crypt; print(crypt.crypt("${PWD}"))') -c "" ${USER} && pip install delta-spark
