--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -7,4 +7,4 @@ ARG CFG_PASSWORD
 ENV USER ${CFG_USER}
 ENV PWD ${CFG_PASSWORD}
 
-RUN useradd --password $(python3 -c 'import crypt; print(crypt.crypt("${PWD}"))') -c "" ${USER} && pip install delta-spark
+RUN useradd --password $(python3 -c 'import crypt; print(crypt.crypt("${PWD}"))') -c "" ${USER} && pip install --yes delta-spark
