--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-temp/
+temp/*
 data/hadoop/dfs/datanode/*
 data/hadoop/dfs/namenode/*
 data/hadoop/postgres/*
@@ -12,5 +12,4 @@ data/kafka/data/*
 data/kafka/zookeeper/*
 data/airflow/*
 .gitignore
-.git/
-check-dataplatform*
+.git/*
