--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -4,7 +4,10 @@ FROM jupyter/pyspark-notebook:spark-3.2.0
 LABEL maintainer="Dario Palladino <dariopalladino@protonmail.com>"
 ARG CFG_USER
 ARG CFG_PASSWORD
-ENV USER ${CFG_USER}
-ENV PWD ${CFG_PASSWORD}
 
-RUN useradd --password $(python3 -c 'import crypt; print(crypt.crypt("${PWD}"))') -c "" ${USER} && pip install --yes delta-spark
+USER root
+
+RUN useradd --password $(python3 -c 'import crypt; print(crypt.crypt("${CFG_PASSWORD}"))') ${CFG_USER}
+RUN pip install delta-spark
+
+USER jupyter
