--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -163,7 +163,7 @@ services:
       - zookeeper3
 
   sparkmaster:
-    image: 'dariopad/spark:3.2.0-snapshot'
+    image: 'dariopad/spark:3.2.0-snapshot-1'
     container_name: sparkmaster
     hostname: sparkmaster
     restart: unless-stopped
@@ -197,7 +197,7 @@ services:
       - kafka-3
 
   sparkworker-1:
-    image: 'dariopad/spark:3.2.0-snapshot'
+    image: 'dariopad/spark:3.2.0-snapshot-1'
     container_name: sparkworker-1
     hostname: sparkworker-1
     restart: unless-stopped
@@ -232,7 +232,7 @@ services:
       - kafka-3
 
   sparkworker-2:
-    image: 'dariopad/spark:3.2.0-snapshot'
+    image: 'dariopad/spark:3.2.0-snapshot-1'
     container_name: sparkworker-2
     hostname: sparkworker-2
     restart: unless-stopped
@@ -370,7 +370,7 @@ services:
       - iotnet
   
   jupyter-spark:
-    image: dariopad/jupyter-pyspark:spark-3.2.0-snapshot
+    image: dariopad/jupyter-pyspark:spark-3.2.0-snapshot-1
     container_name: jupyter
     hostname: jupyter
     restart: unless-stopped
@@ -560,7 +560,7 @@ services:
 
   # ===> Beta test not yet fully working <====
   # airflow-scheduler:    
-  #   image: dariopad/airflow-spark:latest
+  #   image: dariopad/airflow-spark:spark-3.2.0-snapshot-1
   #   container_name: airflow-sk
   #   hostname: airflow-sk
   #   restart: unless-stopped
@@ -576,7 +576,7 @@ services:
   #     - AIRFLOW_DATABASE_PASSWORD=bitnami-pwd
   #     - AIRFLOW_EXECUTOR=CeleryExecutor
   #     - AIRFLOW_WEBSERVER_HOST=airflow
-  #     # - AIRFLOW_REDIS_HOST=redis://redis:6379/
+  #     # - AIRFLOW_REDIS_HOST=redis://redis-cache:6379/
   #     # - AIRFLOW_DATABASE_PATH=db+postgresql://airflow:airflow@postgres/airflow
   #     - AIRFLOW_REDIS_HOST=redis
   #     - AIRFLOW_REDIS_PORT_NUMBER=6379
@@ -588,7 +588,7 @@ services:
   #     - airflow     
 
   # airflow-worker:
-  #   image: dariopad/airflow-spark:latest
+  #   image: dariopad/airflow-spark:spark-3.2.0-snapshot-1
   #   container_name: airflow-wk
   #   hostname: airflow-wk
   #   restart: unless-stopped
@@ -604,7 +604,7 @@ services:
   #     - AIRFLOW_DATABASE_PASSWORD=bitnami-pwd
   #     - AIRFLOW_EXECUTOR=CeleryExecutor
   #     - AIRFLOW_WEBSERVER_HOST=airflow
-  #     # - AIRFLOW_REDIS_HOST=redis://redis:6379/
+  #     # - AIRFLOW_REDIS_HOST=redis://redis-cache:6379/
   #     # - AIRFLOW_DATABASE_PATH=db+postgresql://airflow:airflow@postgres/airflow
   #     - AIRFLOW_REDIS_HOST=redis
   #     - AIRFLOW_REDIS_PORT_NUMBER=6379
@@ -616,7 +616,7 @@ services:
   #     - airflow
 
   # airflow:
-  #   image: dariopad/airflow-spark:latest
+  #   image: dariopad/airflow-spark:spark-3.2.0-snapshot-1
   #   container_name: airflow
   #   hostname: airflow
   #   restart: unless-stopped
@@ -633,7 +633,7 @@ services:
   #     - AIRFLOW_DATABASE_PASSWORD=bitnami-pwd
   #     - AIRFLOW_EXECUTOR=CeleryExecutor
   #     - AIRFLOW_WEBSERVER_HOST=airflow
-  #     # - AIRFLOW_REDIS_HOST=redis://redis:6379/
+  #     # - AIRFLOW_REDIS_HOST=redis://redis-cache:6379/
   #     # - AIRFLOW_DATABASE_PATH=db+postgresql://airflow:airflow@postgres/airflow
   #     - AIRFLOW_REDIS_HOST=redis
   #     - AIRFLOW_REDIS_PORT_NUMBER=6379
@@ -667,8 +667,8 @@ services:
   # just needed for airflow
   redis:
     image: redis:alpine
-    container_name: dp-redis
-    hostname: dp-redis
+    container_name: redis-cache
+    hostname: redis-cache
     restart: unless-stopped
     ports:
       - 6379:6379
