--- a/spark/docker-compose.yml
+++ b/spark/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   sparkmaster:
-    image: 'dariopad/spark:3.2.0-snapshot'
+    image: 'dariopad/spark:${SPARK_BRANCH}'
     container_name: sparkmaster
     hostname: sparkmaster
     restart: unless-stopped
@@ -16,6 +16,14 @@ services:
       SPARK_RPC_AUTHENTICATION_SECRET: "no"
       SPARK_RPC_ENCRYPTION_ENABLED: "no"
       SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED: "no"
+      SPARK_MASTER_URL: "spark://sparkmaster:7077"
+      SPARK_HIVE_EVENTLOG_ENABLED: "true"
+      SPARK_HIVE_HDFS_EVENTLOG_DIR: "hdfs://namenode:9000/sparklogs"
+      SPARK_HIVE_JDBC: "jdbc:hive2://hive-metastore:10000"
+      SPARK_HIVE_WAREHOUSE_STAGING_DIR: "hfds://namenode:9000/hadoop/dfs/data"
+      SPARK_HIVE_THRIFT_SERVER: "thrift://hive-metastore:9083"
+      SPARK_HIVE_CREDENTIALS_ENABLED: "false"
+      SPARK_HIVE_PRINCIPAL: "hiveusr/hivepwd@hive-metastore"
       SPARK_SSL_ENABLED: "no"
       # SPARK_SSL_KEY_PASSWORD:
       # SPARK_SSL_KEYSTORE_FILE: /opt/bitnami/spark/conf/certs/spark-keystore.jks
@@ -32,7 +40,7 @@ services:
       - ../data/spark/resources:/opt/bitnami/spark/resources #Resources folder (Must be the same path in airflow and Spark Cluster)      
 
   sparkworker-1:
-    image: 'dariopad/spark:3.2.0-snapshot'
+    image: 'dariopad/spark:${SPARK_BRANCH}'
     container_name: sparkworker-1
     hostname: sparkworker-1
     restart: unless-stopped
@@ -47,6 +55,13 @@ services:
       SPARK_RPC_AUTHENTICATION_SECRET: "no"
       SPARK_RPC_ENCRYPTION_ENABLED: "no"
       SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED: "no"
+      SPARK_HIVE_EVENTLOG_ENABLED: "true"
+      SPARK_HIVE_HDFS_EVENTLOG_DIR: "hdfs://namenode:9000/sparklogs"
+      SPARK_HIVE_JDBC: "jdbc:hive2://hive-metastore:10000"
+      SPARK_HIVE_WAREHOUSE_STAGING_DIR: "hfds://namenode:9000/hadoop/dfs/data"
+      SPARK_HIVE_THRIFT_SERVER: "thrift://hive-metastore:9083"
+      SPARK_HIVE_CREDENTIALS_ENABLED: "false"
+      SPARK_HIVE_PRINCIPAL: "hiveusr/hivepwd@hive-metastore"
       SPARK_SSL_ENABLED: "no"
       # SPARK_SSL_KEY_PASSWORD:
       # SPARK_SSL_KEYSTORE_FILE: /opt/bitnami/spark/conf/certs/spark-keystore.jks
@@ -64,7 +79,7 @@ services:
       - sparkmaster
 
   sparkworker-2:
-    image: 'dariopad/spark:3.2.0-snapshot'
+    image: 'dariopad/spark:${SPARK_BRANCH}'
     container_name: sparkworker-2
     hostname: sparkworker-2
     restart: unless-stopped
@@ -79,6 +94,13 @@ services:
       SPARK_RPC_AUTHENTICATION_SECRET: "no"
       SPARK_RPC_ENCRYPTION_ENABLED: "no"
       SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED: "no"
+      SPARK_HIVE_EVENTLOG_ENABLED: "true"
+      SPARK_HIVE_HDFS_EVENTLOG_DIR: "hdfs://namenode:9000/sparklogs"
+      SPARK_HIVE_JDBC: "jdbc:hive2://hive-metastore:10000"
+      SPARK_HIVE_WAREHOUSE_STAGING_DIR: "hfds://namenode:9000/hadoop/dfs/data"
+      SPARK_HIVE_THRIFT_SERVER: "thrift://hive-metastore:9083"
+      SPARK_HIVE_CREDENTIALS_ENABLED: "false"
+      SPARK_HIVE_PRINCIPAL: "hiveusr/hivepwd@hive-metastore"
       SPARK_SSL_ENABLED: "no"
       # SPARK_SSL_KEY_PASSWORD:
       # SPARK_SSL_KEYSTORE_FILE: /opt/bitnami/spark/conf/certs/spark-keystore.jks
@@ -97,7 +119,7 @@ services:
       - sparkmaster
 
   jupyter-spark:
-    image: dariopad/jupyter-pyspark:spark-3.2.0-snapshot
+    image: 'dariopad/jupyter-spark:${SPARK_BRANCH}'
     container_name: jupyter
     hostname: jupyter
     restart: unless-stopped
