--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -80,7 +80,64 @@ services:
     depends_on:
       - zookeeper1
 
+  schema-registry:
+    image: confluentinc/cp-schema-registry:7.0.0
+    hostname: schema-registry
+    container_name: schema-registry
+    restart: unless-stopped
+    depends_on:
+      - kafka-1
+      - kafka-2
+      - kafka-3
+    networks: 
+      - iotnet
+    ports:
+      - "8091:8081"
+    environment:
+      SCHEMA_REGISTRY_HOST_NAME: schema-registry
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'kafka-1:9092,kafka-2:9092,kafka-3:9092'
+      SCHEMA_REGISTRY_LISTENERS: http://schema-registry:8091
+
+
+  kafka-rest-proxy:
+    image: confluentinc/cp-kafka-rest:7.0.0
+    container_name: kafka-rest-proxy
+    restart: unless-stopped
+    depends_on:
+      - kafka-1
+      - kafka-2
+      - kafka-3
+      - schema-registry
+    networks: 
+      - iotnet
+    ports:
+      - 8092:8082
+    hostname: rest-proxy
+    environment:
+      KAFKA_REST_HOST_NAME: kafka-rest-proxy
+      KAFKA_REST_BOOTSTRAP_SERVERS: 'kafka-1:9092,kafka-2:9092,kafka-3:9092'
+      KAFKA_REST_LISTENERS: "http://kafka-rest-proxy:8092"
+      KAFKA_REST_SCHEMA_REGISTRY_URL: 'http://schema-registry:8091'
+
+  kafka-ui:
+    image: 'obsidiandynamics/kafdrop'
+    container_name: 'kafka-ui'
+    restart: unless-stopped
+    environment:
+      - KAFKA_BROKERCONNECT=kafka-1:9092,kafka-2:9092,kafka-3:9092
+      - SERVER_PORT=8080
+    networks:
+      - iotnet
+    ports:
+      - "8085:8080"
+    depends_on:
+      - kafka-1
+      - kafka-2
+      - kafka-3
+      - zookeeper1
+      - zookeeper2
+
 networks:
   iotnet:
     external: true
-    name: iot_net
+    name: ${DOCKER_NETWORK:-iot_net}
